--- a/assets/style.scss.liquid
+++ b/assets/style.scss.liquid
@@ -56,6 +56,7 @@ $bp: 960px;
 
 body.fixed {
     position: fixed;
+    width: 100%
 }
 
 
@@ -89,6 +90,7 @@ body.fixed {
 
 }
 
+
 .header.nav-active .wrap-header-nav {
     transform: translateX(0)
 }
@@ -99,11 +101,14 @@ body.fixed {
 
 .header-nav .nav-item {
     margin-top: 24px;
-    font-size: 17px
+
+    a {
+        font-size: 17px
+    }
+
 }
 
 .header-nav-overlay {
-    cursor: pointer;
     display: none;
     width: 100%;
     height: 100%;
