--- a/assets/footer.css.liquid
+++ b/assets/footer.css.liquid
@@ -1,12 +1,13 @@
+/* reset */
+
 * {
   margin: 0;
   padding: 0;
 }
-body {
-  font-family: "NotoSansJP", "Roboto", "Microsoft Yahei", '宋體', 'simsun', Arial, sans-serif;
-}
 
 body {
+  font-family: "NotoSansJP", "Roboto", "Microsoft Yahei", '宋體', 'simsun',
+    Arial, sans-serif;
   background-color: #f6f6f6;
 }
 
@@ -14,22 +15,32 @@ ul,
 li {
   list-style: none
 }
+
 a {
   text-decoration: none;
 }
-.footer {
-  background-color: #f5f5f5;
-}
+
 ul li a {
   color: #666;
 }
-/* .width {
-  max-width: 1100px;
-  margin: 0 auto;
-  width: 90%;
-} */
 
-.panel-title {
+/*// reset */
+
+.footer {
+  background: #f5f5f5;
+}
+
+/* .width { max-width: 1100px; margin: 0 auto; width: 90%; } */
+
+.newsletter-area {}
+
+.info-area {}
+
+.navigation-area {}
+
+.navigation-area .title,
+.newsletter-area .title,
+.info-area .title {
   margin-top: 0;
   margin-bottom: 0;
   font-size: 16px;
