--- a/assets/footer.css.liquid
+++ b/assets/footer.css.liquid
@@ -30,17 +30,30 @@ ul li a {
   background: #f5f5f5;
 }
 
+.footer .width {
+  padding: 0 20px;
+}
+
 /* .width { max-width: 1100px; margin: 0 auto; width: 90%; } */
 
-.newsletter-area {}
+.newsletter-block {}
 
-.info-area {}
+.list-sub {
+  padding-left: 8px;
+  margin-bottom: 10px;
+}
 
-.navigation-area {}
+.list-sub li a {
+  font-size: 0.8125rem;
+}
 
-.navigation-area .title,
-.newsletter-area .title,
-.info-area .title {
+.info-block {}
+
+.navigation-block {}
+
+.navigation-block .title,
+.newsletter-block .title,
+.info-block .title {
   margin-top: 0;
   margin-bottom: 0;
   font-size: 16px;
