--- a/assets/footer.css.liquid
+++ b/assets/footer.css.liquid
@@ -56,7 +56,7 @@ ul li a {
 .info-block .title {
   margin-top: 0;
   margin-bottom: 0;
-  font-size: 16px;
+  font-size: 0.9375rem;
   color: inherit;
   color: #666;
 }
