--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -42,6 +42,7 @@
     </div>
     <div class="footer-bottom">
       <p>{{ section.settings.copyright }}</p>
+      <p>{{ section.settings.heading }}</p>
 
       {% comment %}
         <div class="footer-cards">
@@ -60,6 +61,11 @@
     {
       "id": "copyright",
       "label": "Copyright text",
+      "type": "text"
+    }
+    {
+      "id": "heading",
+      "label": "Heading",
       "type": "text"
     }
   ],
