--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -41,8 +41,8 @@
       {% endfor %}
     </div>
     <div class="footer-bottom">
-      <p>{{ section.settings.copyright }}</p>
-      <p>{{ section.settings.heading }}</p>
+      <p class="title">{{ section.settings.copyright }}</p>
+      <p class="descrip">{{ section.settings.heading }}</p>
 
       {% comment %}
         <div class="footer-cards">
