style.scss.liquid

--- a/assets/style.scss.liquid
+++ b/assets/style.scss.liquid
@@ -68,6 +68,8 @@ body.fixed {
     .logo {
         display: block;
         width: 100%;
+        max-width: 165px;
+        margin: 0 auto;
         text-align: center
     }
 }
@@ -83,11 +85,8 @@ body.fixed {
     top: 0;
     padding: 0 15px;
     max-width: 300px;
-    transform:
-        translateX(-100%);
+    transform: translateX(-100%);
     transition: 0.4s transform;
-
-
 }
 
 
