--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -6,7 +6,7 @@
 
     {{ content_for_header }}
 
-    {{ 'style.scss' | asset_url | stylesheet_tag }}
+    {{ 'style.css' | asset_url | stylesheet_tag }}
     {{ 'footer.css' | asset_url | stylesheet_tag }}
   </head>
   <body>
