--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+body {
+    font-family: "NotoSansJP", "Roboto", "Microsoft Yahei", '宋體', 'simsun', Arial, sans-serif;
+}
+
 body.fixed {
     position: fixed;
     width: 100%
@@ -22,7 +26,6 @@ body.fixed {
     text-align: center
 }
 
-
 .wrap-header-nav {
     position: fixed;
     z-index: 10;
@@ -35,7 +38,6 @@ body.fixed {
     transform: translateX(-100%);
     transition: 0.4s transform;
 }
-
 
 .header.nav-active .wrap-header-nav {
     transform: translateX(0)
@@ -128,3 +130,50 @@ header.nav-active .header-nav-overlay {
     -o-transform: translateY(-9px) rotate(-45deg);
     transform: translateY(-9px) rotate(-45deg);
 }
+
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+
+    .wrap-header-nav {
+        position: static;
+        background: transparent;
+        padding: 0;
+        transform: translateX(0);
+        transition: 0.4s transform;
+    }
+
+    .gnb {
+        width: 1100px;
+        margin: 0 auto;
+    }
+
+    .header-nav {
+        display: flex;
+    }
+
+    .header-nav .nav-item .link {
+        color: #141414;
+        font-size: .9375rem;
+        letter-spacing: 0;
+        font-weight: bold;
+        margin: 0 10px;
+    }
+
+    .header-hamburger {
+        display: none;
+    }
+
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {}
