--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -144,16 +144,25 @@ header.nav-active .header-nav-overlay {
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
 
+
+    .header-top {
+        width: 1200px;
+        margin: 0 auto;
+    }
+
+    .header-bottom {}
+
     .wrap-header-nav {
         position: static;
         background: transparent;
         padding: 0;
         transform: translateX(0);
-        transition: 0.4s transform;
+        transition: none;
+        max-width: none;
     }
 
     .gnb {
-        width: 1100px;
+        width: 1200px;
         margin: 0 auto;
     }
 
