--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -20,7 +20,7 @@
         {% for link in section.settings.blocks %}
           {% if block.type="navigation" %}
             <li class="util-item">
-              <a class="link" href="{{link.url}}">{{ link.title }}</a>
+              <a class="link" href="{{link.url}}">dddd{{ link.title }}</a>
             </li>
           {% endif %}
         {% endfor %}
@@ -30,6 +30,14 @@
 
   <div class="header-bottom">
     <div class="wrap-header-nav">
+      <h1>all menu</h1>
+      <div class="all-menu">
+        {% for link in section.settings.navigation.links %}
+          <li class="nav-item">
+            <a class="link" href="{{link.url}}">{{ link.title }}</a>
+          </li>
+        {% endfor %}
+      </div>
       <div class="gnb">
         <ul class="header-nav">
           {% for link in section.settings.navigation.links %}
