--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -47,11 +47,11 @@ body.fixed {
     display: block
 }
 
-.header-nav .nav-item {
+.list-nav .nav-item {
     margin-top: 24px;
 }
 
-.header-nav .nav-item a {
+.list-nav .nav-item a {
     font-size: 17px
 }
 
@@ -152,6 +152,18 @@ header.nav-active .header-nav-overlay {
 
     .header-bottom {}
 
+    .btn-cate {
+        color: #141414;
+        font-size: .9375rem;
+        letter-spacing: 0;
+        font-weight: bold;
+        margin: 0 10px;
+    }
+
+    .block-cate {
+        display: none;
+    }
+
     .wrap-header-nav {
         position: static;
         background: transparent;
@@ -161,16 +173,16 @@ header.nav-active .header-nav-overlay {
         max-width: none;
     }
 
-    .gnb {
+    .block-gnb {
         width: 1200px;
         margin: 0 auto;
     }
 
-    .header-nav {
+    .list-nav {
         display: flex;
     }
 
-    .header-nav .nav-item .link {
+    .list-nav .nav-item .link {
         color: #141414;
         font-size: .9375rem;
         letter-spacing: 0;
