--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -14,41 +14,28 @@
       <span class="line"></span>
       <span class="line"></span>
     </button>
-
-    {% comment %}
-      <div class="util-menu">
-        <ul class="list-util">
-          {% for block in section.blocks %}
-            {% if block.type="utilmenu" %}
-              <li class="util-item">
-                <a class="link" href="">dddd</a>
-              </li>
-            {% endif %}
-          {% endfor %}
-        </ul>
-      </div>
-    {% endcomment %}
   </div>
 
   <div class="header-bottom">
     <div class="wrap-header-nav">
-      <h1>all menu</h1>
-      <div class="all-menu">
-        <ul>
+      <h1 class="btn-cate">カテゴリー</h1>
+      <div class="block-cate">
+        <ul class="list-cate">
           {% for link in section.settings.navigation.links %}
-            <li class="nav-item">
+            <li class="cate-item">
               <a class="link" href="{{link.url}}">{{ link.title }}</a>
             </li>
           {% endfor %}
         </ul>
       </div>
-      <div class="gnb">
-        <ul class="header-nav">
+
+      <div class="block-gnb">
+        <ul class="list-nav">
           {% for link in section.settings.navigation.links %}
             <li class="nav-item">
               <a class="link" href="{{link.url}}">{{ link.title }}</a>
               {% if link.links != blank %}
-                <ul class="header-nav-sub">
+                <ul class="list-nav-sub">
                   {% for child in link.links %}
                     <li class="nav-item-sub">
                       <a href="{{child.url}}">{{ child.title }}</a>
@@ -57,6 +44,20 @@
                 </ul>
               {% endif %}
             </li>
+          {% endfor %}
+        </ul>
+      </div>
+
+      <div class="block-side-menu">
+        <ul>
+          {% for block in section.blocks %}
+            {% if block.type == 'utilmenu' %}
+              {% for link in block.settings.linklist.links %}
+                <li>
+                  <a href="{{link.url}}">{{ link.title }}</a>
+                </li>
+              {% endfor %}
+            {% endif %}
           {% endfor %}
         </ul>
       </div>
@@ -112,6 +113,20 @@
       "id": "navigation",
       "label": "Navigation menu",
       "default": "main-menu"
+    }
+  ],
+  "max_blocks": 5,
+  "blocks": [
+    {
+      "name": "Util colum",
+      "type": "utilmenu",
+      "settings": [
+        {
+          "id": "linklist",
+          "type": "link_list",
+          "label": "Util menu"
+        }
+      ]
     }
   ]
 }
