--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -150,7 +150,10 @@ header.nav-active .header-nav-overlay {
         margin: 0 auto;
     }
 
-    .header-bottom {}
+    .header-bottom {
+        width: 1200px;
+        margin: 0 auto;
+    }
 
     .btn-cate {
         color: #141414;
@@ -158,13 +161,28 @@ header.nav-active .header-nav-overlay {
         letter-spacing: 0;
         font-weight: bold;
         margin: 0 10px;
+        cursor: pointer;
     }
 
-    .block-cate {
+    .block-cate {}
+
+    .block-cate .list-cate {
+        background: #fff;
         display: none;
+        width: 100%;
+    }
+
+    .block-cate .list-cate.active {
+        display: block;
+        position: absolute;
+        background: #fff;
+        left: 0;
+        top: 34px;
+        z-index: 10;
     }
 
     .wrap-header-nav {
+        display: flex;
         position: static;
         background: transparent;
         padding: 0;
@@ -173,13 +191,21 @@ header.nav-active .header-nav-overlay {
         max-width: none;
     }
 
-    .block-gnb {
-        width: 1200px;
-        margin: 0 auto;
-    }
+
 
     .list-nav {
         display: flex;
+    }
+
+    .list-nav-sub {
+        display: none;
+        position: absolute;
+
+    }
+
+    .list-nav .nav-item {
+        position: relative;
+        margin-top: 0;
     }
 
     .list-nav .nav-item .link {
