--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     {{ content_for_header }}
 
     {{ 'style.css' | asset_url | stylesheet_tag }}
@@ -13,7 +14,7 @@
   </head>
   <body>
     {% section 'header' %}
-    {% comment %} {{ content_for_layout }} {% endcomment %}
+    {{ content_for_layout }}
     {% section 'footer' %}
   </body>
 </html>
