--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -151,8 +151,7 @@ header.nav-active .header-nav-overlay {
     }
 
     .header-bottom {
-        width: 1200px;
-        margin: 0 auto;
+        width: 100%;
     }
 
     .btn-cate {
@@ -183,12 +182,14 @@ header.nav-active .header-nav-overlay {
 
     .wrap-header-nav {
         display: flex;
-        position: static;
+        position: initial;
         background: transparent;
         padding: 0;
         transform: translateX(0);
         transition: none;
         max-width: none;
+        justify-content: center;
+
     }
 
 
