--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -144,6 +144,41 @@ header.nav-active .header-nav-overlay {
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
 
+    .cate-item a,
+    .nav-item a {
+        position: relative;
+    }
+
+    .cate-item a span,
+    .nav-item a span {
+        opacity: 0.99;
+    }
+
+    .cate-item a:before,
+    .nav-item a:before {
+        content: '';
+        position: absolute;
+        left: -2px;
+        bottom: 0;
+        width: 0;
+        height: 6px;
+        border-radius: 3px;
+        transition: width 0.25s ease-out;
+    }
+
+    .cate-item.on a:before,
+    .nav-item.on a:before {
+        width: calc(100% + 3px);
+        background-image: linear-gradient(to bottom, #9bce26, #9bce26);
+    }
+
+
+
+
+    .header-nav-overlay {
+        display: none !important;
+    }
+
     .gnb {
         width: 1200px;
         margin: 0 auto;
@@ -163,23 +198,81 @@ header.nav-active .header-nav-overlay {
     }
 
     .btn-cate {
+        display: flex;
+        cursor: pointer;
+        background: transparent;
+        border: none;
+        outline: none;
+        padding: 0;
+        appearance: none;
+        font-family: NotoSansJP, Roboto, Microsoft Yahei, \5b8b\9ad4, simsun, Arial, sans-serif;
+    }
+
+    .btn-cate .icon-hamburger {
+        width: 20px;
+        display: block;
+    }
+
+    .btn-cate .txt-menu {
         color: #141414;
         font-size: .9375rem;
         letter-spacing: 0;
         font-weight: bold;
-        margin: 0 10px;
-        cursor: pointer;
+        margin-left: 5px;
     }
+
+
+
+    .btn-cate .icon-hamburger .line {
+        width: 100%;
+        height: 1px;
+        background-color: #000;
+        display: block;
+        margin: 5px auto;
+        -webkit-transition: all 0.3s ease-in-out;
+        -o-transition: all 0.3s ease-in-out;
+        transition: all 0.3s ease-in-out;
+    }
+
+    .btn-cate .icon-hamburger .line:first-child {
+        margin-top: 4px;
+    }
+
+    .btn-cate .icon-hamburger .line:nth-child(3) {
+        margin-bottom: 0;
+    }
+
 
     .cate {}
 
-    .cate .list-cate {
+    .wrap-allmenu {
         background: #fff;
         display: none;
         width: 100%;
     }
 
-    .cate .list-cate.active {
+    .cate .list-cate {
+        width: 1200px;
+        margin: 0 auto;
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        height: 230px;
+    }
+
+    .cate .list-cate .cate-item {
+        margin-top: 12px;
+    }
+
+    .cate .list-cate .cate-item .link {
+        color: #141414;
+        font-size: .9375rem;
+        letter-spacing: 0;
+        font-weight: 700;
+        margin: 0 10px;
+    }
+
+    .cate .wrap-allmenu.active {
         display: block;
         position: absolute;
         background: #fff;
