--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -243,82 +243,105 @@ header.nav-active .header-nav-overlay {
     }
 
 
-    .cate {}
-
-    .wrap-allmenu {
-        background: #fff;
-        display: none;
-        width: 100%;
-    }
-
-    .cate .list-cate {
-        width: 1200px;
-        margin: 0 auto;
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: column;
-        height: 230px;
-    }
-
-    .cate .list-cate .cate-item {
-        margin-top: 12px;
-    }
-
-    .cate .list-cate .cate-item .link {
+    .tit-cate-area .txt-tit {
         color: #141414;
         font-size: .9375rem;
         letter-spacing: 0;
         font-weight: 700;
-        margin: 0 10px;
+
     }
 
-    .cate .wrap-allmenu.active {
+    .tit-cate-area .txt-tit:after {
+        content: "";
         display: block;
-        position: absolute;
-        background: #fff;
-        left: 0;
-        top: 34px;
-        z-index: 10;
+        width: 100%;
+        height: 1px;
+        background: #cacaca;
     }
+}
 
-    .wrap-header-nav {
-        position: initial;
-        background: transparent;
-        padding: 0;
-        transform: translateX(0);
-        transition: none;
-        max-width: none;
+.wrap-gnb-container {
+    background: #fff;
+    display: none;
+    width: 100%;
+}
 
-    }
+.cate .wrap-gnb-container .wrap-gnb-inner-container {
+    display: flex;
+    justify-content: space-between;
+    width: 1200px;
+    margin: 0 auto;
+    padding-top: 30px;
+
+}
+
+.cate .wrap-gnb-container .wrap-gnb-inner-container .list-cate {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    height: 230px;
+}
+
+
+.cate .list-cate .cate-item {
+    margin-top: 12px;
+}
+
+.cate .list-cate .cate-item .link {
+    color: #141414;
+    font-size: .9375rem;
+    letter-spacing: 0;
+    font-weight: 700;
+    margin: 0;
+}
+
+.cate .wrap-gnb-container.active {
+    display: block;
+    position: absolute;
+    background: #fff;
+    left: 0;
+    top: 34px;
+    z-index: 10;
+}
+
+.wrap-header-nav {
+    position: initial;
+    background: transparent;
+    padding: 0;
+    transform: translateX(0);
+    transition: none;
+    max-width: none;
+
+}
 
 
 
-    .list-nav {
-        display: flex;
-    }
+.list-nav {
+    display: flex;
+}
 
-    .list-nav-sub {
-        display: none;
-        position: absolute;
+.list-nav-sub {
+    display: none;
+    position: absolute;
 
-    }
+}
 
-    .list-nav .nav-item {
-        position: relative;
-        margin-top: 0;
-    }
+.list-nav .nav-item {
+    position: relative;
+    margin-top: 0;
+}
 
-    .list-nav .nav-item .link {
-        color: #141414;
-        font-size: .9375rem;
-        letter-spacing: 0;
-        font-weight: bold;
-        margin: 0 10px;
-    }
+.list-nav .nav-item .link {
+    color: #141414;
+    font-size: .9375rem;
+    letter-spacing: 0;
+    font-weight: bold;
+    margin: 0 10px;
+}
 
-    .header-hamburger {
-        display: none;
-    }
+.header-hamburger {
+    display: none;
+}
 
 }
 
