--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -245,7 +245,7 @@ header.nav-active .header-nav-overlay {
 
     .tit-cate-area .txt-tit {
         color: #141414;
-        font-size: .9375rem;
+        font-size: .875rem;
         letter-spacing: 0;
         font-weight: 700;
 
@@ -275,6 +275,14 @@ header.nav-active .header-nav-overlay {
 
 }
 
+.cate .wrap-gnb-container .wrap-gnb-inner-container .col:first-child {
+    width: 400px;
+}
+
+.cate .wrap-gnb-container .wrap-gnb-inner-container .col:nth-child(2) {
+    width: 200px;
+}
+
 .cate .wrap-gnb-container .wrap-gnb-inner-container .list-cate {
     display: flex;
     flex-wrap: wrap;
@@ -285,11 +293,12 @@ header.nav-active .header-nav-overlay {
 
 .cate .list-cate .cate-item {
     margin-top: 12px;
+    width: 200px;
 }
 
 .cate .list-cate .cate-item .link {
     color: #141414;
-    font-size: .9375rem;
+    font-size: .875rem;
     letter-spacing: 0;
     font-weight: 700;
     margin: 0;
