--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -173,7 +173,7 @@
     {
       "type": "image_picker",
       "id": "logo",
-      "label": "Logo"
+      "label": "Logo 160*250"
     },
     {
       "type": "range",
@@ -195,6 +195,27 @@
       "id": "allMenu",
       "label": "All menu",
       "default": "main-menu"
+    },
+    {
+      "type": "image",
+      "name": "banner 1",
+      "settings": [
+        {
+          "type": "image_picker",
+          "id": "image",
+          "label": "Image"
+        },
+        {
+          "type": "range",
+          "id": "image_width",
+          "min": 50,
+          "max": 550,
+          "step": 5,
+          "unit": "px",
+          "label": "Image width",
+          "default": 100
+        }
+      ]
     }
   ],
   "max_blocks": 5,
