--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -176,6 +176,16 @@
       "label": "Logo 160*250"
     },
     {
+      "type": "image_picker",
+      "id": "banner01",
+      "label": "banner 01"
+    },
+    {
+      "type": "image_picker",
+      "id": "banner02",
+      "label": "banner 02"
+    },
+    {
       "type": "range",
       "id": "padding",
       "label": "Header height",
@@ -195,27 +205,6 @@
       "id": "allMenu",
       "label": "All menu",
       "default": "main-menu"
-    },
-    {
-      "type": "image",
-      "name": "banner 1",
-      "settings": [
-        {
-          "type": "image_picker",
-          "id": "image",
-          "label": "Image"
-        },
-        {
-          "type": "range",
-          "id": "image_width",
-          "min": 50,
-          "max": 550,
-          "step": 5,
-          "unit": "px",
-          "label": "Image width",
-          "default": 100
-        }
-      ]
     }
   ],
   "max_blocks": 5,
