--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -71,7 +71,11 @@
                     {% endif %}
                   {% endfor %}
                 </div>
-                <div class="col">img2-+</div>
+                <div class="col">
+                  <a hrf="">
+                    <img src="{{ section.settings.banner01 | img_url: 'master' }}">
+                  </a>
+                </div>
               </div>
             </div>
           </div>
