--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -76,6 +76,11 @@
                     <img src="{{ section.settings.banner01 | img_url: 'master' }}">
                   </a>
                 </div>
+                <div class="col">
+                  <a hrf="">
+                    <img src="{{ section.settings.banner02 | img_url: 'master' }}">
+                  </a>
+                </div>
               </div>
             </div>
           </div>
