--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -72,13 +72,13 @@
                   {% endfor %}
                 </div>
                 <div class="col">
-                  <a hrf="" style="display:block;max-width: min(100%, {{ block.settings.banner02_width }}px);">
-                    <img src="{{ section.settings.banner01 | img_url: 'master' }}">
+                  <a hrf="" style="display:block;max-width: min(100%, {{ section.settings.banner01_width }}px);">
+                    <img src="{{ section.settings.banner01 | img_url: 'master' }}" width="100%">
                   </a>
                 </div>
                 <div class="col">
-                  <a hrf="" style="display:block;max-width: min(100%, {{ block.settings.image_width }}px);">
-                    <img src="{{ section.settings.banner02 | img_url: 'master' }}">
+                  <a hrf="" style="display:block;max-width: min(100%, {{ section.settings.banner01_width }}px);">
+                    <img src="{{ section.settings.banner02 | img_url: 'master' }}" width="100%">
                   </a>
                 </div>
               </div>
@@ -190,11 +190,6 @@
       "label": "banner 01"
     },
     {
-      "type": "image_picker",
-      "id": "banner02",
-      "label": "banner 02"
-    },
-    {
       "type": "range",
       "id": "banner01_width",
       "label": "Banner01 width",
@@ -205,9 +200,14 @@
       "unit": "px"
     },
     {
+      "type": "image_picker",
+      "id": "banner02",
+      "label": "banner 02"
+    },
+    {
       "type": "range",
       "id": "banner02_width",
-      "label": "Banner01 width",
+      "label": "Banner02 width",
       "default": 200,
       "min": 50,
       "max": 550,
